kubernetes/apps/default/vaultwarden/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: "cred.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            service:
              identifier: app
              port: https
